RESOLVED FIXED198886
[LFC][BFC] Fix available width for float avoiders.
https://bugs.webkit.org/show_bug.cgi?id=198886
Summary [LFC][BFC] Fix available width for float avoiders.
alan
Reported 2019-06-15 01:12:01 PDT
it's not always the width of the content box.
Attachments
Patch (24.99 KB, patch)
2019-06-15 01:53 PDT, alan
no flags
Patch (24.99 KB, patch)
2019-06-15 05:54 PDT, alan
no flags
Patch (24.99 KB, patch)
2019-06-15 11:47 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-06-15 01:12:23 PDT
alan
Comment 2 2019-06-15 01:53:50 PDT
EWS Watchlist
Comment 3 2019-06-15 01:56:20 PDT
Attachment 372188 [details] did not pass style-queue: ERROR: Source/WebCore/layout/blockformatting/BlockFormattingContextGeometry.cpp:233: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
alan
Comment 4 2019-06-15 05:54:09 PDT
Antti Koivisto
Comment 5 2019-06-15 06:37:31 PDT
Comment on attachment 372190 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=372190&action=review > Source/WebCore/layout/FormattingContext.cpp:179 > +// FIXME turn these into templates. FIXME:
alan
Comment 6 2019-06-15 11:47:25 PDT
WebKit Commit Bot
Comment 7 2019-06-15 12:30:12 PDT
Comment on attachment 372196 [details] Patch Clearing flags on attachment: 372196 Committed r246468: <https://trac.webkit.org/changeset/246468>
WebKit Commit Bot
Comment 8 2019-06-15 12:30:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.