Source/WebCore/layout/FormattingContext.h
@@ -60,7 +60,9 @@ public:
 
     static Display::Box mapBoxToAncestor(const LayoutState&, const Box&, const Container& ancestor);
     static LayoutUnit mapTopToAncestor(const LayoutState&, const Box&, const Container& ancestor);
-    static Point mapCoordinateToAncestor(const LayoutState&, Point, const Container& containingBlock, const Container& ancestor);
+    static LayoutUnit mapLeftToAncestor(const LayoutState&, const Box&, const Container& ancestor);
+    static LayoutUnit mapRightToAncestor(const LayoutState&, const Box&, const Container& ancestor);
+    static Point mapPointToAncestor(const LayoutState&, Point, const Container& containingBlock, const Container& ancestor);
 
 protected:
     using LayoutQueue = Vector<const Box*>;
